objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_CIF_ID__c</fullName>
        <description>Reference for the Account CIF ID  (legacy system identification for business accounts).</description>
        <formula>Account.CIF_Id__c</formula>
        <label>Account CIF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RUT__c</fullName>
        <description>Account RUT required for the integration.</description>
        <formula>Account.RUT__c</formula>
        <label>Account RUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_birthday_date__c</fullName>
        <formula>IF(MONTH(Birthdate) &gt; MONTH(TODAY()),DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)), 
IF(MONTH(Birthdate) &lt; MONTH(TODAY()),DATE(YEAR(TODAY())+1,MONTH(Birthdate),DAY(Birthdate)), 
IF(DAY(Birthdate) &gt;= (DAY(TODAY())),DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)), 
DATE(YEAR(TODAY())+1,MONTH(Birthdate),DAY(Birthdate)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha anual de cumpleaños</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apellido_materno__c</fullName>
        <label>Apellido materno</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>CIF Contact Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <description>lista de valores con cargos posibles para el contacto</description>
        <inlineHelpText>seleccione un cargo para el contacto</inlineHelpText>
        <label>Cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apoderado</fullName>
                </value>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
                <value>
                    <fullName>Decorador</fullName>
                </value>
                <value>
                    <fullName>Gerente General</fullName>
                </value>
                <value>
                    <fullName>Arquitecto</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Abogado</fullName>
                </value>
                <value>
                    <fullName>Periodista</fullName>
                </value>
                <value>
                    <fullName>Gerente de Relacione</fullName>
                </value>
                <value>
                    <fullName>Jefe de Relaciones P</fullName>
                </value>
                <value>
                    <fullName>Especialista de Rela</fullName>
                </value>
                <value>
                    <fullName>Representante de Ven</fullName>
                </value>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
                <value>
                    <fullName>Abogado Jefe</fullName>
                </value>
                <value>
                    <fullName>Abogado Subjefe</fullName>
                </value>
                <value>
                    <fullName>Abogado Senior</fullName>
                </value>
                <value>
                    <fullName>Abogado Junior</fullName>
                </value>
                <value>
                    <fullName>Procurador</fullName>
                </value>
                <value>
                    <fullName>Gerente Contralorma</fullName>
                </value>
                <value>
                    <fullName>Asesor Tributario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_Classification__c</fullName>
        <label>Commercial Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_Email__c</fullName>
        <label>Correo comercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Conjugal_Regime__c</fullName>
        <label>Régimen Conyugal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CON SEPARACIÓN</fullName>
                    <label>Separación Total de Bienes</label>
                </value>
                <value>
                    <fullName>SIN SEPARACIÓN</fullName>
                    <label>Sociedad Conyugal</label>
                </value>
                <value>
                    <fullName>PARTICIPACIÓN EN GANANCIALES</fullName>
                    <label>Participación en los Gananciales</label>
                </value>
                <value>
                    <fullName>SIN INFORMACIÓN</fullName>
                    <label>Sin información</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <description>Para conector Salesforce Marketing Cloud. Favor no borrar</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_RUT__c</fullName>
        <label>RUT del contacto</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Educational_Level__c</fullName>
        <label>Educational Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basico</fullName>
                    <label>Básica</label>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Sin Asignación</fullName>
                </value>
                <value>
                    <fullName>Técnico Universitario</fullName>
                </value>
                <value>
                    <fullName>Técnico</fullName>
                </value>
                <value>
                    <fullName>Universitario Completo</fullName>
                </value>
                <value>
                    <fullName>Universitario Incompleto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_RUT__c</fullName>
        <label>RUT del Empleador</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Empleador</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_telefone__c</fullName>
        <inlineHelpText>Formato: +562 1234 1234</inlineHelpText>
        <label>Teléfono del Empleador</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Viudo</fullName>
                </value>
                <value>
                    <fullName>Convivencia Civil</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
                <value>
                    <fullName>Sin Información</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Nacimiento__c</fullName>
        <label>Fecha de Nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <label>Linkedin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto_MAC_creado__c</fullName>
        <label>Monto MAC creado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_completo__c</fullName>
        <description>SSi nombres está vacío y ApMaterno también entonces solo pone ApPaterno, pero si ApMaterno existe pone ApPaterno + ApMaterno. 
Si nombre existe y ApMaterno no, entonces pone Nombre+ApPaterno, pero si ApMaterno existe por Nombre + ApPaterno + ApMaterno.</description>
        <formula>If ( ISBLANK( FirstName ),If ( ISBLANK( Apellido_materno__c) ,LastName, LastName &amp;&quot; &quot;&amp; Apellido_materno__c),If ( ISBLANK( Apellido_materno__c) ,FirstName &amp;&quot; &quot;&amp; LastName, FirstName &amp;&quot; &quot;&amp; LastName &amp;&quot; &quot;&amp; Apellido_materno__c))</formula>
        <label>Nombre completo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particular_Landline__c</fullName>
        <description>Teléfono fijo particular de Personas Naturales</description>
        <label>Teléfono fijo particular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Particular_Phone_Other__c</fullName>
        <description>Otro teléfono particular para personas naturales de cuentas persona y para contactos</description>
        <label>Otro teléfono particular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_contact__c</fullName>
        <inlineHelpText>Formato: +562 1234 1234</inlineHelpText>
        <label>Teléfono contacto</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profesión</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABOGADO</fullName>
                </value>
                <value>
                    <fullName>ACTOR</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRACION ECOTURIMO</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRADOR DE EMPRESAS</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRADOR DE SERVICIOS</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRADOR EN COMERCIALIZACION</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRADOR FINANCIERO</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRADOR HOTELERO</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRADOR PUBLICO</fullName>
                </value>
                <value>
                    <fullName>AGENTE DE VENTAS</fullName>
                </value>
                <value>
                    <fullName>AGRICULTOR</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS</fullName>
                </value>
                <value>
                    <fullName>ANIMADOR DE TV</fullName>
                </value>
                <value>
                    <fullName>ANTROPOLOGO</fullName>
                </value>
                <value>
                    <fullName>ARQUEOLOGO</fullName>
                </value>
                <value>
                    <fullName>ARQUITECTO</fullName>
                </value>
                <value>
                    <fullName>ARSENALERA</fullName>
                </value>
                <value>
                    <fullName>ASISTENTE SOCIAL</fullName>
                </value>
                <value>
                    <fullName>ASTRONOMO</fullName>
                </value>
                <value>
                    <fullName>BIBLIOTECOLOGO</fullName>
                </value>
                <value>
                    <fullName>BIOLOGO</fullName>
                </value>
                <value>
                    <fullName>BIOLOGO MARINO</fullName>
                </value>
                <value>
                    <fullName>BIOQUIMICO</fullName>
                </value>
                <value>
                    <fullName>CIENTISTA POLITICO</fullName>
                </value>
                <value>
                    <fullName>CIRUJANO DENTISTA</fullName>
                </value>
                <value>
                    <fullName>COMPOSITOR</fullName>
                </value>
                <value>
                    <fullName>COMUNICADOR</fullName>
                </value>
                <value>
                    <fullName>COMUNICADOR AUDIOVISUAL</fullName>
                </value>
                <value>
                    <fullName>COMUNICADOR SOCIAL</fullName>
                </value>
                <value>
                    <fullName>CONSTRUCTOR CIVIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RUT_formato_AUX__c</fullName>
        <description>Fórmula con puntos:
IF( n_AUX__c &lt;=1, RIGHT(RUT_sin_puntos_AUX__c, 1),
IF( n_AUX__c &lt;=4, LEFT(RUT_sin_puntos_AUX__c, n_AUX__c -1) &amp;&quot;-&quot;&amp; RIGHT(RUT_sin_puntos_AUX__c, 1), 
IF( n_AUX__c &lt;=7, LEFT(RUT_sin_puntos_AUX__c, n_AUX__c -4) &amp;&quot;.&quot;&amp; MID(RUT_sin_puntos_AUX__c, n_AUX__c -3, 3) &amp;&quot;-&quot;&amp; RIGHT(RUT_sin_puntos_AUX__c, 1), 
IF( n_AUX__c &lt;=10, LEFT(RUT_sin_puntos_AUX__c, n_AUX__c -7)&amp;&quot;.&quot;&amp; MID(RUT_sin_puntos_AUX__c, n_AUX__c -6, 3) &amp;&quot;.&quot;&amp; MID(RUT_sin_puntos_AUX__c, n_AUX__c -3, 3) &amp;&quot;-&quot;&amp; RIGHT(RUT_sin_puntos_AUX__c, 1), 
&quot;RUT incorrecto&quot;) ) ))</description>
        <formula>IF( n_AUX__c &lt;= 1,&quot;&quot;,LEFT( RUT_sin_puntos_AUX__c,LEN(RUT_sin_puntos_AUX__c)-1)&amp;&quot;-&quot;&amp;RIGHT(RUT_sin_puntos_AUX__c,1))</formula>
        <label>RUT formato AUX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUT_sin_puntos_AUX__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Contact_RUT__c,&quot;k&quot;,&quot;K&quot;),&quot;-&quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;,&quot;,&quot;&quot;)</formula>
        <label>RUT sin puntos AUX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Género</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                    <label>Masculino</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                    <label>Femenino</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_First_Name__c</fullName>
        <description>Se reduce largo de 40 a 30 porque Inversiones tiene máximo 30 caracteres. 2017/09/01 EB</description>
        <label>Nombre Cónyuge</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Contacto__c</fullName>
        <description>Tipo de contacto</description>
        <inlineHelpText>Seleccione el tipo de contacto</inlineHelpText>
        <label>Tipo de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ejecutivo Máximo</fullName>
                </value>
                <value>
                    <fullName>Ejecutivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>n_AUX__c</fullName>
        <formula>LEN( RUT_sin_puntos_AUX__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>n AUX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ALLOW_PORTAL_SELF_REG</columns>
        <filterScope>Everything</filterScope>
        <label>Todos Los contactos</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Cumpleaños de este mes</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Formato_de_RUT</fullName>
        <active>false</active>
        <description>Para el campo RUT del contacto, obliga al usuario a poner el &quot;-&quot; antes del dígito verificador y valida que el RUT no contenga números y comas.</description>
        <errorConditionFormula>NOT(ISBLANK(Contact_RUT__c)) &amp;&amp;
NOT(CONTAINS(LEFT(RIGHT(Contact_RUT__c , 2),1), &quot;-&quot;)) || CONTAINS(Contact_RUT__c,&quot;,&quot;) || CONTAINS(Contact_RUT__c,&quot;.&quot;)</errorConditionFormula>
        <errorDisplayField>Contact_RUT__c</errorDisplayField>
        <errorMessage>El formato ingresado no es válido, ingrese sin puntos y con guión Ej: 11111111-1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_RUT</fullName>
        <active>true</active>
        <description>Valida RUTs menores a 1.000.000.000-DV
(EB)</description>
        <errorConditionFormula>IF(ISBLANK( Contact_RUT__c ), false, IF( RIGHT( RUT_sin_puntos_AUX__c , 1) = if( MOD(
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),9),1)) *7)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),8),1)) *8)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),7),1)) *9)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),6),1)) *4)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),5),1)) *5)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),4),1)) *6)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),3),1)) *7)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),2),1)) *8)+
( VALUE(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),1)) *9),11) ==10, &quot;K&quot;,
text(MOD(
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),9),1)) *7)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),8),1)) *8)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),7),1)) *9)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),6),1)) *4)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),5),1)) *5)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),4),1)) *6)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),3),1)) *7)+
( VALUE(left(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),2),1)) *8)+
( VALUE(right(&quot;0000000&quot;&amp;LEFT( RUT_sin_puntos_AUX__c , n_AUX__c -1),1)) *9),11)))
, false, true))</errorConditionFormula>
        <errorDisplayField>Contact_RUT__c</errorDisplayField>
        <errorMessage>RUT no válido</errorMessage>
    </validationRules>
</CustomObject>